# aegis-osint

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  setup.sh
.cargo/: audit.toml
.github/workflows/: ci.yml
fixtures/: policy.yaml  scope.yaml
src/: lib.rs  main.rs
src/cli/: assets.rs  defensive.rs  doctor.rs  findings.rs  init.rs  menu.rs  mod.rs  offensive.rs  report.rs  scope.rs
src/config/: mod.rs  settings.rs
src/defensive/: mod.rs  orchestrator.rs  scanner.rs
src/defensive/brand/: mod.rs
src/defensive/drift/: mod.rs
src/defensive/monitor/: mod.rs
src/findings/: mod.rs  scoring.rs  verifier.rs
src/offensive/: mod.rs  orchestrator.rs  toolkit.rs
src/offensive/cloud/: mod.rs
src/offensive/correlation/: mod.rs
src/offensive/discovery/: mod.rs
src/offensive/web/: mod.rs
src/policy/: engine.rs  mod.rs  rules.rs
src/reporting/: generator.rs  mod.rs  templates.rs
src/scope/: definition.rs  engine.rs  mod.rs  validation.rs
src/storage/: database.rs  mod.rs  models.rs  queries.rs
src/utils/: http.rs  mod.rs  terminal.rs  validation.rs
tests/: defensive_tests.rs  integration_tests.rs  offensive_tests.rs  tui_tests.rs
